[tool.poetry]
name = "langchain-mistral-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "^2"
transformers = "^4.35.2"
#torch = {version = "^2.1.1", source = "pytorch"}
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.1.1%2Bcu118-cp311-cp311-win_amd64.whl" }
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ruff = "^0.1.7"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
